--- a/thuzincar/src/main/resources/application.properties
+++ b/thuzincar/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=thuzincar
+spring.h2.console.enabled=true
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
