--- a/thuzincar/src/main/resources/application.properties
+++ b/thuzincar/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=thuzincar
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:file:./data/thuzincar
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
