feat:create car endpoint and structure

--- a/thuzincar/src/main/resources/application.properties
+++ b/thuzincar/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:file:./data/thuzincar
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
